[package]
name = "commonware-eigenlayer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
eigen-services-blsaggregation = "2.0.0"
eigen-client-avsregistry = "2.0.0"
eigen-services-avsregistry = "2.0.0"
eigen-services-operatorsinfo = "2.0.0"
eigen-crypto-bls = "2.0.0"
eigen-crypto-bn254 = "2.0.0"
bn254 = { git = "https://github.com/BreadchainCoop/bn254.git" }
eigen-common = "2.0.0"
alloy = "1.0.30"
alloy-primitives = "1.3.1"
alloy-provider = "1.0.30"
alloy-network = "1.0.30"
alloy-transport = "1.0.30"
alloy-transport-http = "1.0.30"
eigen-types = "2.0.0"
eigen-utils = "2.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = { version = "2.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio-util = "0.7"

tokio-rustls = { version = "0.26.2" }
rand = "0.9.0"

anyhow = "1.0.97"
eyre = "0.6.12"
serde_json = "1.0.140"

[dev-dependencies]
tower = { version = "0.5.2", features = ["full"] }
alloy-json-rpc = "1.0.30"
alloy-node-bindings = "1.0.30"
tokio = { version = "1", features = ["full"] }
rand = "0.9.0"

[build-dependencies]
